--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node ./scripts/create-env.js && webpack --mode production --config webpack.config.js",
+    "build": "webpack --mode production --config webpack.config.js",
     "dev": "webpack --config webpack.config.dev.js",
     "build:watch": "webpack --watch --config webpack.config.js",
     "dev:watch": "webpack --watch webpack.config.dev.js"
@@ -26,7 +26,6 @@
   },
   "homepage": "https://github.com/gndx/js-portfolio#readme",
   "dependencies": {
-    "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0"
   },
   "devDependencies": {
@@ -44,6 +43,8 @@
     "mini-css-extract-plugin": "^2.2.2",
     "stylus": "^0.55.0",
     "stylus-loader": "^6.1.0",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "webpack": "^5.52.1",
+    "webpack-dev-server": "^4.2.0"
   }
 }
